[metadata]

name = rsk-mt
version = 0.5.0
author = David Spence
author_email = python3-rsk-mt@roughsketch.co.uk
license = GNU General Public License v2 or later (GPLv2+)
description = Modelling toolkit
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://python3-rsk-mt.roughsketch.co.uk/
project_urls =
    Source Code = https://github.com/xurator/python3-rsk-mt/
classifiers =
    Private :: Do Not Upload
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)

[options]

package_dir =
    =src
packages = find:
python_requires =
    >=3.10

[options.packages.find]

where = src

[options.package_data]

rsk_mt = jsonschema/share/*.json

[tox:tox]

min_version = 4.0

[testenv]

description = run unit tests
deps =
    nose2
    coverage
commands = nose2 -v -C --coverage src/
